Fix about us img render on iOS 16 chrome.

--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ footer h4 {
 .about-img {
   display: block;
   max-width: 400px;
+  max-height: 400px;
   border-radius: 12px;
 }
 
